--- a/info.html
+++ b/info.html
@@ -200,6 +200,16 @@
               </div>
             </div>
           </div>
+          <div class="attribution-info">
+            <p>
+              Challenge by
+              <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+              >. Coded by <a href="#">Matthew Bosveld</a>.
+            </p>
+          </div>
         </div>
       </div>
     </main>
