--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
               />
             </svg>
           </div>
+          <div class="attribution">
+            <p>
+              Challenge by
+              <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+              >. Coded by <a href="#">Matthew Bosveld</a>.
+            </p>
+          </div>
         </footer>
       </main>
     </div>
